@@ -21,6 +21,8 @@ Graphics:
  bug: fix 256B granularity sprite addressing for sub gpu
  bug: fix 128-wide captures
  bug: fix color overflow in capture blending
+ bug: fix disp fifo capture
+ bug: fix simultaneous vram display and capture via same bank
  bug: swrast: add clear image and scroll emulation
  bug: swrast: fixes to shadow rendering
   
